Add benchmarks and minecraft options